force-app/main/default/objects/FieloPLT__EmailCampaign__c/FieloPLT__EmailCampaign__c.object-meta.xml
<CustomObject>
    <description>Targetable mass email for marketing and Member engagement.</description>
    <label>Email Campaign</label>
    <nameField>
        <label>Email Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>