force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__CampaignId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CampaignId__c</fullName>
    <description>The Fielo ID for an Email Campaign.</description>
    <displayFormat>EC-{0000}</displayFormat>
    <inlineHelpText>The Fielo ID for this Email Campaign.</inlineHelpText>
    <label>Campaign Id</label>
    <type>AutoNumber</type>
</CustomField>