force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Challenge that the Email Campaign is associated with (if any).</description>
    <inlineHelpText>This is the Challenge that the Email Campaign is associated with (if any).</inlineHelpText>
    <label>Challenge</label>
    <referenceTo>FieloPLT__Challenge__c</referenceTo>
    <relationshipLabel>Email Campaigns</relationshipLabel>
    <relationshipName>EmailCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>