force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Criteria__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Criteria__c</fullName>
    <description>Defines which Members will be part of the campaign based on conditions evaluated on Member fields.</description>
    <inlineHelpText>Choose which Members will be part of your campaign by defining conditions based upon Member fields.</inlineHelpText>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>