force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Date__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Date__c</fullName>
    <description>The date the Email Campaign will be sent out. If blank, the Email Campaign commences immediately.</description>
    <inlineHelpText>Choose the date you want your Email Campaign to be sent out. If blank, your campaign will start immediately.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>