force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EmailTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Fielo Email Template to be used in the Email Campaign.</description>
    <inlineHelpText>Enter the Fielo Email Template you want to use in your campaign. Only templates of type Campaign will appear. You can view, edit and create Fielo Email Templates in the Programs tab.</inlineHelpText>
    <label>Email Template</label>
    <referenceTo>FieloPLT__EmailTemplate__c</referenceTo>
    <relationshipLabel>Email Campaigns</relationshipLabel>
    <relationshipName>EmailCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>