force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ErrorDescription__c</fullName>
    <description>Error description, when there are any.</description>
    <label>Error Description</label>
    <type>TextArea</type>
</CustomField>