force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__FilterType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__FilterType__c</fullName>
    <description>Defines how the Email Campaign will be targeted. This can be by Segment or by Custom criteria.</description>
    <inlineHelpText>Choose how you want to target your campaign. You can use segmentation (&quot;Segment&quot;) or specify your own criteria (&quot;Custom&quot;).</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segment</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>