force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Frequency__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Frequency__c</fullName>
    <description>For recurrent campaigns, defines the frequency of campaign emails.</description>
    <inlineHelpText>Choose how often you want your campaign emails to be sent out.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>d.1</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>d.7</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>m.1</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>m.3</fullName>
                <label>Every Three Months</label>
            </value>
            <value>
                <fullName>m.6</fullName>
                <label>Every Six Months</label>
            </value>
            <value>
                <fullName>m.12</fullName>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>