force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Object__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Object__c</fullName>
    <description>This is the object around which Members are incentivized.</description>
    <inlineHelpText>This is the object around which Members are incentivized.</inlineHelpText>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>