force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Program the Email Campaign belongs to.</description>
    <inlineHelpText>This is the Program that the Email Campaign belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Email Campaigns</relationshipLabel>
    <relationshipName>EmailCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>