force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Promotion that the Email Campaign is associated with (if any).</description>
    <inlineHelpText>This is the Promotion that the Email Campaign is associated with (if any).</inlineHelpText>
    <label>Promotion</label>
    <referenceTo>FieloPLT__Promotion__c</referenceTo>
    <relationshipLabel>Email Campaigns</relationshipLabel>
    <relationshipName>EmailCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>