force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Targets the Email Campaign by Segment. When using this field, only the Members who are part of the selected Segment(s) will receive the campaign email. Segments are configured in the Programs tab.</description>
    <inlineHelpText>Add the Segment(s) you want to be part of the campaign. You can view, edit and create Segments in the Programs tab.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloPLT__Segment__c</referenceTo>
    <relationshipLabel>Email Campaigns</relationshipLabel>
    <relationshipName>EmailCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>