force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>The current status of the campaign. Options are: Scheduled, when the start Date is in the future; In Progress, when the campaign has already started (for recurrent campaigns); and Sent, when the campaign has been completed.</description>
    <inlineHelpText>This is the current status of the campaign.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>