force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>The type of the campaign: Standard for one-time campaigns and Recurrent for recurring campaigns.</description>
    <inlineHelpText>Choose the type of campaign you want to set up: Standard for a one-time campaign or Recurrent for a recurring campaign.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurrent</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>