force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__WhatId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__WhatId__c</fullName>
    <label>What Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>