force-app/main/default/objects/FieloPLT__EmailCampaign__c/fields/FieloPLT__WhereCondition__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__WhereCondition__c</fullName>
    <description>The criteria that specify which Members an Email Campaign will be sent to.</description>
    <inlineHelpText>These are the criteria that specify which Members the Email Campaign will be sent to.</inlineHelpText>
    <label>Where Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>