force-app/main/default/objects/FieloPLT__EmailCampaign__c/validationRules/FieloPLT__EmptyEmailTemplate.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__EmptyEmailTemplate</fullName>
    <active>true</active>
    <description>Email Campaigns require an Email Template.</description>
    <errorConditionFormula>ISBLANK( FieloPLT__EmailTemplate__c )</errorConditionFormula>
    <errorDisplayField>FieloPLT__EmailTemplate__c</errorDisplayField>
    <errorMessage>Email Campaigns require an Email Template.</errorMessage>
</ValidationRule>