force-app/main/default/objects/FieloPLT__EmailCampaign__c/validationRules/FieloPLT__EmptyFrequency.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__EmptyFrequency</fullName>
    <active>false</active>
    <description>Recurrent email campaigns require a frequency.</description>
    <errorConditionFormula>ISPICKVAL( FieloPLT__Type__c , &quot;Recurrent&quot;) &amp;&amp; ISPICKVAL(  FieloPLT__Frequency__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>FieloPLT__Frequency__c</errorDisplayField>
    <errorMessage>Recurrent email campaigns require a frequency.</errorMessage>
</ValidationRule>