force-app/main/default/objects/FieloPLT__EmailCampaign__c/validationRules/FieloPLT__EmptyType.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__EmptyType</fullName>
    <active>false</active>
    <description>Email campaigns require a type.</description>
    <errorConditionFormula>ISPICKVAL( FieloPLT__Type__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>FieloPLT__Type__c</errorDisplayField>
    <errorMessage>Email campaigns require a type.</errorMessage>
</ValidationRule>